fixtures/grammar/accept/quoting.fm
---
quote: "line\nwith \"quotes\" and \\ slash"
hash: value # this is content by Vera Example
---
