fixtures/grammar/reject/unicode-surrogate.fm
---
value: "\ud800"
---
Vera Example
